# whatamess

./: .gitattributes  .gitignore  README.md  vendor.yml
codingame/codegolf/temperature/: temperature.go
exercism/bash/: acronym.sh  bob.bash  error_handling.sh  grain.sh  hamming.sh  leap.sh  raindrops.sh  reverse-string.sh  two_fer.sh
exercism/c/grains/: grains.c  grains.h
exercism/clojure/clojure-noob/: CHANGELOG.md
exercism/cobol/: leap.cbl  reverse_string.cbl  yacht.cbl
exercism/cpp/: hamming.cpp  hamming.h  leap.cpp  reverse_string.cpp  reverse_string.h
exercism/csharp/: lasagna.cs  leap.cs  rollthedie.cs
exercism/fsharp/: car_assemble.fs  infiltration.fs  lasagne.fs  loglevels.fs  reversestring.fs  twofer.fs
exercism/javascript/: amusement_park.js  analytics.js  bubblesort.js  chatbot.js  coordinate-transformation.js  custom_signs.js  elyses.js  fruit_picker.js  highscore_board.js  lasagna-master.js  looping.js  lucky-numbers.js  pizza.js  playlist.js  reverse_string.js  sensors.js  transformative.js  translation.js  windowing.js
exercism/nim/: leap.nim  reverse_string.nim
exercism/php/: hamming.php  leap.php  resistorcolor.php  series.php
exercism/python/: ghost_gobble.py
exercism/ruby/: assembly.rs
exercism/rust/beer_song/: lib.rs
exercism/rust/grains/: lib.rs
exercism/rust/leap/: lib.rs
exercism/scheme/: grains.scheme  leap.scheme  twofer.scheme
exercism/scheme/grains/: grains.scm
exercism/tcl/: leap.tcl  resistor.tcl
exercism/vimscript/: bob.vim  grains.vim  leap.vim  resistor-color.vim  space-age.vim
exercism/wasm/: collatz.wat  darts.wat  hamming.wat  leap.wat  reverse-string.wat
exercism/zig/: acronym.zig  acronym_ii.zig  anagram.zig  anagram_ii.zig  armstrong.zig  armstrong_ii.zig  bob.zig  bob_ii.zig  darts.zig  darts_ii.zig  difference-of-squares.zig  difference-of-squares_ii.zig  grains.zig  grains_ii.zig  hamming.zig  hamming_ii.zig  isbn.zig  isbn_ii.zig  isogram.zig  isogram_ii.zig  leap.zig  luhn.zig  luhn_ii.zig  pangram.zig  pangram_ii.zig  proverb.zig  proverb_ii.zig  resistor_colour.zig  resistor_colour_better.zig  reverse_string.zig  reverse_string_ii.zig  space_age.zig  space_age_ii.zig  test_grains.zig  test_word_count.zig  triangle.zig  triangle_ii.zig  two-fer.zig  two-fer_ii.zig  two-fer_iii.zig  (+2 more)
languages/rust/experiments/iced/hello_iced/: Cargo.toml  README.md  index.html
languages/rust/experiments/iced/hello_iced/src/: data.rs  main.rs
languages/rust/experiments/webserver/forecast/: Cargo.toml  start_db.sh  test_ct.sh
languages/rust/experiments/webserver/forecast/src/: georesponse.rs  main.rs
languages/rust/experiments/webserver/forecast/templates/: index.html
languages/rust/experiments/yew/yew_canvas/: Cargo.toml  Trunk.toml  index.html  run.sh
languages/rust/experiments/yew/yew_canvas/src/: main.rs
languages/rust/tooling/rust_cleaner/: Cargo.toml
languages/rust/tooling/rust_cleaner/src/: main.rs
languages/scratch/: CS50_0_Project.sb3
languages/watlings/: package-lock.json  package.json
tooling/docker_test/: build.sh  index.html  run.sh
(+2874 files in other folders)
