[package]
name = "forecast"
version = "0.1.0"
edition = "2021"
authors = ["Ewald Horn <ewald@nofuss.co.za>"]

[dependencies]
# web framework
axum = "0.6.20"
# async HTTP client
reqwest = { version = "0.11.22", features = ["json"] }
# serialization/deserialization  for JSON
serde = "1.0.188"
# database access
sqlx = "0.7.2"
# async runtime
tokio = { version = "1.33.0", features = ["full"] }
