[package]
name = "forecast"
version = "0.1.0"
edition = "2021"
authors = ["Ewald Horn <ewald@nofuss.co.za>"]

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
# web framework
axum = "0.6.20"
axum-macros = "0.3.8"
base64 = "0.21.4"
# async HTTP client
reqwest = { version = "0.11.20", features = ["json"] }
# serialization/deserialization  for JSON
serde = "1.0.188"
# database access
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "macros",
    "any",
    "postgres",
] }
# async runtime
tokio = { version = "1.32.0", features = ["full"] }
